<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="4dp">

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/montserrat_alternates_extrabold"
            android:gravity="center"
            android:text="@string/info"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/dot_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/dot_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="true"
            android:fontFamily="@font/montserrat_alternates"
            android:hint="@string/name_info"
            android:inputType="textPersonName"
            android:textColorHint="@color/light_dark_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/barrier_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info"
            tools:ignore="LabelFor" />

        <androidx.cardview.widget.CardView
            android:id="@+id/barrier_dialog"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toTopOf="@+id/characteristic_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dot_input" />

        <EditText
            android:id="@+id/characteristic_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="true"
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/montserrat_alternates"
            android:hint="@string/characteristic_info"
            android:inputType="textPersonName"
            android:textColorHint="@color/light_dark_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/new_dot_add_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier_dialog"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/new_dot_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:text="@string/okay"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characteristic_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>